Made arrows smaller to fit with frame better, adjusted caption font size to prevent clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,9 @@ hr {
 	display: none;
 	position: fixed;
 	color: white;
-	top: 95%;
+	bottom: 5px;
 	left: 50%;
-	font-size: 2em;
+	font-size: 1.5em;
 }
 footer {
 	text-align: center;
@@ -138,23 +138,23 @@ footer {
 #left {
 	display: none;
 	position: fixed;
-	margin-left: 20px;
-	width: 50px;
-	height: 80px;
+	margin-left: 10px;
+	width: 25px;
+	height: 40px;
 	top: 50%;
-	margin-top: -40px;
-	opacity: 0.5;
+	margin-top: -20px;
+	opacity: 0.3;
 }
 #right {
 	display: none;
 	position: fixed;
-	margin-right: 20px;
-	width: 50px;
-	height: 80px;
+	margin-right: 10px;
+	width: 25px;
+	height: 40px;
 	top: 50%;
-	margin-top: -40px;
+	margin-top: -20px;
+	opacity: 0.3;
 	right: 0px;
-	opacity: 0.5;
 }
 #left:hover, #right:hover, #gallery li img:hover {
 	cursor: pointer;
